<resources>
    <string name="app_name">Cool Weather</string>
    <string name="enter_name_of_city_here">Enter name of city here</string>
    <string name="refresh">Refresh</string>
    <string name="enter_city_name_here">Enter City Name here</string>
    <string name="something_went_wrong">Something went wrong</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Address</string>
    <string name="maxtemp">MaxTemp</string>
    <string name="mintemp">MinTemp</string>
    <string name="weatherDescription">WeatherDescription</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="temperature">Temperature</string>
    <string name="search">Search</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="title_activity_search">ActivitySearch</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>